JP-2707: Fix failures in ComChannelReadWriteLoggerTest